--- a/frog_tags.css
+++ b/frog_tags.css
@@ -2,7 +2,7 @@
  * Stylesheets for FrogTags Plugin's documentation page.
  */
 
-.frogtags h2 {
+.wolftags h2 {
 	background-color: #F5F5F5;
 	border-bottom: solid 1px #DDD;
 	font-size: 1.1em;
@@ -11,15 +11,15 @@
 	padding: .1em .4em;
 }
 
-.frogtags h3 {
+.wolftags h3 {
 	color: #666;
 	font-size: 1em;
 	font-weight: normal;
 	margin: .5em 0;
 }
 
-.frogtags p,
-.frogtags dl {
+.wolftags p,
+.wolftags dl {
 	margin: .5em 0;
 }
 
@@ -28,18 +28,18 @@
 	margin-left: 1.5em;
 }
 
-.frogtags dt {
+.wolftags dt {
 	clear: left;
 	font-style: italic;
 	float: left;
 	margin-right: 1em;
 }
 
-.frogtags dd {
+.wolftags dd {
 	margin: .5em 0 .5em 5em;
 }
 
-.frogtags pre {
+.wolftags pre {
 	font-size: 1em;
 	background-color: #FFD;
 	border: solid .5em #EEC;
